--- a/encangados.css
+++ b/encangados.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+@font-face{
+    font-family: sourceserif;
+    src: url(./source-serif-pro/SourceSerifPro-Light.otf);
+}
+
 .menu-lateral .img-logo{
     height: 130px;
     width: 130px;
@@ -14,27 +19,32 @@
     position: absolute;
     left: 20%;
     width: 80%;
+    height: 65px;
     background-color: #1262A2;
     box-shadow: 0px 4px 10px black;
     z-index: 100;
+    box-sizing: border-box;
 }
 
 .menu-superior li{
     list-style-type: none;
     float: left;
+    padding: 10px;
+    
 }
 
 .menu-superior li a{
     text-decoration: none;
     color:white;
     display: block;
-    padding: 20px;
+    padding: 10px;
     font-size: 20px;
+    font-family: 'sourceserif';
 }
 
 .menu-superior li a:hover{
-    background-color: #17B8CA;
-    color:black;
+    border: 2px #17B8CA solid;
+    border-radius: 20px;
 }
 .menu-lateral{
     width: 20%;
@@ -44,6 +54,7 @@
     text-align: center;
     box-shadow: 4px 0px 10px black;
     z-index: 200;
+    font-family: 'sourceserif';
 }
 
 .menu-lateral .img-perfil{
@@ -59,9 +70,9 @@
 }
 
 .menu-lateral .nome-perfil{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    color: black;
+    font-family: 'sourceserif';
+    font-size: 17px;
+    color: white;
 }
 
 .menu-lateral ul li{
@@ -75,6 +86,7 @@
 
 .menu-lateral ul li a{
     display: block;
+    font-size: 13px;
     padding: 10px;
     box-shadow: 0px 1px 1px black;
     transition: background-color 300ms, color 300ms, box-shadow 300ms;
@@ -88,7 +100,7 @@
 .menu-lateral .sair a{
     position: absolute;
     bottom: 0;
-    font-size: 15px;
+    font-size: 12px;
     color:white;
     padding: 10px 20px 10px 20px;
     border: 1px solid black;
@@ -117,7 +129,7 @@
     top: 10%;
     left: 20%;
     position: absolute;
-    
+
 }
 
 .slideshow{
@@ -176,7 +188,7 @@
     text-align: center;
     padding-top:20px;
     font-size: 25px; 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'sourceserif';
 }
 #divBusca{
     background-color:rgba(215, 142, 46, 0.288);
@@ -243,6 +255,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    font-family: 'sourceserif';
 }
 
 .conteudo .categorias .categoria-individual:hover{
@@ -261,14 +274,15 @@
     justify-content: center;
     text-align: center; 
     padding: 10px;
-    font-size: 15px;
+    font-size: 13px;
     border: 3px black solid;
     left: 50%;
     margin-top: 100px;
     transform: translate(-50%, 0);
     border-radius: 10px;
     background-color:rgba(215, 142, 46, 0.1);
-    box-shadow: 4px 4px 10px black
+    box-shadow: 4px 4px 10px black;
+    font-family: 'sourceserif';
 }
 
 .formulario input{
@@ -277,6 +291,7 @@
     padding: 5px;
     border-radius: 10px;
     float: right;
+    font-family: 'sourceserif';
 
 }
 
@@ -286,6 +301,7 @@ select{
     padding: 5px;
     border-radius: 10px;
     float: right;
+    font-family: 'sourceserif';
 }
 
 .formulario input::placeholder{
@@ -298,6 +314,7 @@ select{
     left: 50%;
     transform: translate(-50%, 0);
     margin-top: 50px; 
+    font-family: 'sourceserif';
 }
 
 .voltar{
@@ -311,5 +328,12 @@ select{
     text-decoration: none;
     padding: 10px;
     border-radius: 10px;
+    font-family: 'sourceserif';
+}
 
+.enviar{
+    padding: 7px;
+    background-color: #D78D2E;
+    border-radius: 10px;
+    font-family: 'sourceserif';
 }
