--- a/encangados.css
+++ b/encangados.css
@@ -30,7 +30,6 @@
     list-style-type: none;
     float: left;
     padding: 10px;
-    
 }
 
 .menu-superior li a{
@@ -317,7 +316,7 @@ select{
     font-family: 'sourceserif';
 }
 
-.voltar{
+.home{
     position: fixed;
     bottom: 0;
     right: 0;
@@ -335,5 +334,34 @@ select{
     padding: 7px;
     background-color: #D78D2E;
     border-radius: 10px;
+    font-family: 'sourceserif';
+}
+
+.menu-superior li a.pagina-aberta{
+    background-color: white;
+    border-radius: 20px;
+    color:black;
+}
+    
+.menu-superior li a.pagina-aberta:hover{
+    background-color: #1262A2;
+    color:white;
+}
+
+.menu-lateral li a.pagina-aberta{
+    background-color: white;
+
+    color:black;
+}
+
+.texto-sobre-nos{
+    width: 80%;
+    box-sizing: border-box;
+    margin: 10%;
+    padding: 30px;
+    border: black 3px solid;
+    border-radius: 20px;
+    background-color: rgba(18, 97, 162, 0.123);
+    box-shadow: 4px 4px 15px black;
     font-family: 'sourceserif';
 }
